<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rlBottomBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/lvTopMessage"
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/font_roboto_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/verify_your_phone_number"
                    android:textColor="@color/dark_blue"
                    android:textSize="@dimen/size_20" />

                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:alignContent="stretch"
                    app:alignItems="stretch"
                    app:flexWrap="wrap">

                    <TextView
                        android:id="@+id/tvMobileNumber"
                        style="@style/font_roboto_light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:text=""
                        android:textColor="@color/blackpearl"
                        android:textSize="@dimen/size_20" />

                    <TextView
                        android:id="@+id/tvChangeNumber"
                        style="@style/font_roboto_regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:text="@string/change_your_number"
                        android:textColor="@color/app_light_blue"
                        android:textSize="@dimen/size_14" />

                </com.google.android.flexbox.FlexboxLayout>

                <com.kaodim.kaodim_otp_library.helpers.KaodimPinEntryEditText
                    android:id="@+id/etOTPInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:cursorVisible="false"
                    android:digits="1234567890"
                    android:inputType="number"
                    android:maxLength="6"
                    android:textIsSelectable="false"
                    android:textSize="34sp"
                    app:pinAnimationType="fromBottom" />

                <TextView
                    android:id="@+id/tvError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="5dp"
                    android:gravity="end"
                    android:text=""
                    android:textColor="@color/jasper"
                    android:textSize="@dimen/size_12" />

                <LinearLayout
                    android:id="@+id/llResendCounterPanel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="10dp"
                        android:gravity="end"
                        android:text="@string/resend_code_in"
                        android:textColor="@color/app_grey_dark_standard"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tvResendTimeRemaining"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:gravity="end"
                        android:text="0:00"
                        android:textColor="@color/app_grey_dark_standard"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llResendPanel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="10dp"
                        android:gravity="end"
                        android:text="@string/resend_code"
                        android:textColor="@color/app_light_blue"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/rlBottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <View
            android:id="@+id/viewShadow"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/kdl_grey" />

        <Button
            android:id="@+id/btnVerify"
            style="@style/NormalTextBolded"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_jasper"
            android:clickable="true"
            android:enabled="false"
            android:focusable="true"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:stateListAnimator="@null"
            android:text="@string/_continue"
            android:textColor="#ffffff" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlProgressView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</RelativeLayout>
